添加了按学期查询课表的功能

--- a/.gitignore
+++ b/.gitignore
@@ -104,12 +104,13 @@ venv.bak/
 .mypy_cache/
 
 # temp files
-.ini
-.png
+*.ini
 cookies/
+cls_table/
+grade_csv/
 .DS_Store
-.csv
 
 # PyCharm
 .idea/
 .idea/workspace.xml
+*.png
