--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+aiohttp==3.3.2
 asn1crypto==0.24.0
 async-timeout==3.0.0
 attrs==18.1.0
@@ -19,6 +20,7 @@ Flask-Script==2.0.6
 Flask-WTF==0.14.2
 hyperlink==18.0.0
 idna==2.7
+idna-ssl==1.1.0
 incremental==17.5.0
 itsdangerous==0.24
 jdcal==1.4
@@ -40,6 +42,7 @@ pyOpenSSL==18.0.0
 pyquery==1.4.0
 PySocks==1.6.8
 queuelib==1.5.0
+redis==2.10.6
 requests==2.19.1
 scrapy-splash==0.7.2
 selenium==3.13.0
