--- a/requirements.txt
+++ b/requirements.txt
@@ -44,6 +44,7 @@ PySocks==1.6.8
 queuelib==1.5.0
 redis==2.10.6
 requests==2.19.1
+Scrapy==1.5.1
 scrapy-splash==0.7.2
 selenium==3.13.0
 service-identity==17.0.0
